# threat-intel-fiesta

./: .env  .gitignore  Cargo.toml  LICENSE-MIT  TODO.md  auth.db
.github/actions/build-rust/: action.yaml
.github/workflows/: build.yaml
migrations/: 20220130112247_v0001.up.sql
migrations/2022-01-30-054304_create_users/: up.sql
migrations/2022-01-30-054311_create_credentials/: down.sql  up.sql
migrations/auth/: 20220130112247_v0001.down.sql
migrations/objects/: 20220206045900_v0001.up.sql
src/: auth.rs  lib.rs  main.rs  schema.rs
src/datastores/: auth.rs  mod.rs  object.rs
src/entities/: credential.rs  mod.rs  object.rs  object_relation.rs  prelude.rs  user.rs
src/models/: credential.rs  mod.rs  user.rs
src/routes/: mod.rs
