[package]
name = "threat-intel-fiesta"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
tokio = { version = "^1.6", features = ["full"] }
sea-orm = { version = "^0", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"], default-features = false }
sha2 = "0.10.1"
rand = "0.8.4"
